--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -493,7 +493,7 @@ footer {
             text-align: left;
             text-shadow: 0px 1px 1px #fff;	
         }
-        a#cta {
+        #cta {
             height: 41px;
             margin: 21px 2px 0;
             background: url(/static/images/layout/get-started-btn-orange.png) 0 0 no-repeat transparent;	
