--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -339,7 +339,7 @@
                 
                 <div class="section">
 				    <h5 class="left help">Need Help?</h5>
-                    <a href="{% url simplekey-help-start %}"
+                    <a href="{% url site-getting-started %}"
                         class="get-help-btn left">Get Help</a>
 				    <div class="clearit"></div>
 			    </div>
