--- a/gobotany/site/templates/gobotany/_footer.html
+++ b/gobotany/site/templates/gobotany/_footer.html
@@ -21,7 +21,7 @@
                         <li><a href="{% url full-key-placeholder %}">Full Key</a></li>
                         <li><a href="{% url dich-key-placeholder %}">Dichotomous Key</a></li>
                         <li><a href="{% url teaching %}">Teaching</a></li>
-                        <li><a href="{% url simplekey-help-about %}">About</a></li>
+                        <li><a href="{% url site-about %}">About</a></li>
                     </ul>
                     <h6>Legal</h6>
                     <ul class="legal">
