--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -14,13 +14,13 @@
                 <div class="navigation">
                     <h6>Go Botany</h6>
                     <ul id="footer-nav" class="sections">
-                        <li><a {% ifnotequal request.path "/" %}href="{% url simplekey-index %}"{% endifnotequal %}>Home</a></li>
+                        <li><a {% ifnotequal request.path "/" %}href="{% url site-home %}"{% endifnotequal %}>Home</a></li>
                         <li><a href="{% url simplekey %}">Simple Key</a></li>
                         <li><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
                         <li><a href="{% url full-key-placeholder %}">Full Key</a></li>
                         <li><a href="{% url dich-key-placeholder %}">Dichotomous Key</a></li>
                         <li><a href="{% url teaching %}">Teaching</a></li>
-                        <li><a href="{% url simplekey-help-about %}">About</a></li>
+                        <li><a href="{% url site-about %}">About</a></li>
                     </ul>
                     <h6>Legal</h6>
                     <ul class="legal">
