--- a/gobotany/simplekey/templates/simplekey/_sidebar_items.html
+++ b/gobotany/simplekey/templates/simplekey/_sidebar_items.html
@@ -1,12 +1,12 @@
                     <div class="section">
                         <h5>Want help getting started?</h5>
                         <p>If you're not sure what to do from here, take a look at this Help page for instructions.</p>
-                        <a class="get-help-btn" href="{% url simplekey-help-start %}">Get Help</a>
+                        <a class="get-help-btn" href="{% url site-getting-started %}">Get Help</a>
                     </div>
 
                     <div class="section plant-map">
                         <h5>Shortcut to Groups!</h5>
                         <p>If you already know what group your plant is in, start with the clickable plant map to find your plant more quickly.</p>
-                        <a class="view-map-btn" href="{% url simplekey-help-map %}">View Map</a>
+                        <a class="view-map-btn" href="{% url site-advanced-map %}">View Map</a>
                     </div>
 
