--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -45,6 +45,31 @@ $tooltip-background-bottom-color: #d6e6c5;
 $tooltip-shadow-color: #333333;
 $tooltip-arrow-rotation: 225deg;
 
+$smallscreen-portrait-width: 320px;
+$smallscreen-landscape-width: 480px;
+
+$nav-button-color: #437829;
+$smallscreen-margin: 8px;
+$smallscreen-potd-image-width: 297px;
+
+@mixin offscreen {
+    display: block;
+    text-indent: -9000px;
+}
+
+@mixin container-div {
+    .container {
+        margin: 0 auto;
+        padding: 0 10px;
+        width: 960px;
+    }
+}
+
+@mixin smallscreen-side-margins {
+    margin-left: $smallscreen-margin;
+    margin-right: $smallscreen-margin;
+}
+
 /* Site-wide styles */
 
 body {
@@ -113,19 +138,6 @@ ul li {
     height: 149px;
     position: relative;
     width: 160px;
-}
-
-@mixin offscreen {
-    display: block;
-    text-indent: -9000px;
-}
-
-@mixin container-div {
-    .container {
-        margin: 0 auto;
-        padding: 0 10px;
-        width: 960px;
-    }
 }
 
 /* Header */
@@ -421,619 +433,14 @@ footer {
     top: 6px !important;
 }
 
-/* Home */
+/* Imports for various pages, sections, features, etc. Each of these
+ * can contain their own media queries. */
 
-#home {
-    background: url(/static/images/layout/body-home.jpg) repeat-x left top #f3f3c3;
-    #all {
-        background: url(/static/images/layout/content-home-bg.jpg) center 72px no-repeat transparent;
-    }
-    header {
-        h1 {
-            background: url(/static/images/branding/logo-toplevel.png) no-repeat transparent;
-            float: left;
-            margin: 0 0 0 67px;
-            height: 107px;
-            width: 595px;
-            @include offscreen;
-        }
-        .newfs a {
-            background: url(/static/images/branding/newfs-logo-toplevel.png) no-repeat transparent;
-            height: 88px;
-            width: 160px;
-        }
-        nav {
-            background: url(/static/images/layout/nav-toplevel.png) center 107px no-repeat;
-            height: 160px;
-            padding: 0 0 0 19px;
-            li {
-                margin-right: 9px;
-                &.home {
-                    margin: 0 63px 0 0;
-                    a {
-                        color: #fff;
-                    }
-                }
-                a:hover {
-                    @include highlight-global-nav-home;
-                }
-            }
-        }
-        #search-suggest .menu {
-            top: 133px;
-        }
-    }
-    .content {
-        clear: left;
-        margin-top: 18px;
-    }
-    #banner {
-        margin: 10px 0 0;
-        position: absolute;
-        > img {
-            display: none;
-            height: 345px;
-            left: 0;
-            position: absolute;
-            top: 0;
-            width: 960px;
-            @include single-box-shadow(rgba(0, 0, 0, 0.6), 0px, 0px, 4px);
-        }
-        img:first-child {
-            display: block;
-        }
-        h2 {
-            color: #519136;	
-            font-size: 38px;
-            line-height: normal;
-            margin: 0 0 15px 0;
-        }
-        p {
-            margin: 12px 0 0 0;
-            text-align: left;
-            text-shadow: 0px 1px 1px #fff;	
-        }
-        #cta {
-            height: 41px;
-            margin: 21px 2px 0;
-            background: url(/static/images/layout/get-started-btn-orange.png) 0 0 no-repeat transparent;	
-            @include offscreen;
-            &:hover {
-                background-position: 0 -41px;	
-            }
-            &:active {
-                background-position: 0 -82px;		
-            }
-        }
-    }
-    #overlay {
-        background: rgba(255, 255, 255, 0.8);
-        height: 318px;
-        padding: 15px 30px 0;
-        position: absolute;
-        left: 646px;
-        text-align: center;
-        top: 6px;
-        width: 248px;
-        z-index: 100;
-    }
-    .three-col {
-        background: url(/static/images/layout/dot.png) right top repeat-y;
-        float: left;
-        height: 240px;
-        margin: 354px 23px 5px 0;
-        padding: 8px 23px 0 0;
-        width: 289px;
-        &.last {
-            background: 0;	
-            margin-right: 0;
-            padding: 8px 0 0 0;
-            a.learn-more {
-                margin: 33px 0 0 0;
-            }
-        }
-        h3 {
-            font-size: 24px;
-        }
-        h4 {
-            margin: 0 0 3px 0;
-            font-style: italic;	
-            color: #807121;
-        }
-        a.learn-more {
-            margin: 13px 0 0 0;	
-        }
-    }
-    a {
-        &.learn-more {
-            background: url(/static/images/layout/learn-more-btn.png) 0 0 no-repeat;
-            height: 32px;
-            width: 111px;
-            @include offscreen;
-            &:hover {
-                background-position: 0 -32px;	
-            }
-            &:active {
-                background-position: 0 -64px;	
-            }
-        }
-        &.subscribe {
-            background: url(/static/images/layout/subscribe.png) 0 0 no-repeat;
-            cursor: pointer;
-            height: 16px;
-            width: 87px;
-            @include offscreen;
-            &:hover {
-                background-position: 0 -16px;
-            }
-            &:active {
-                background-position: 0 -32px;
-            }
-        }
-    }
-    #potd {   /* Plant of the Day */
-        background: #c7e2a1;
-        border: 3px solid #fff;
-        clear: left;
-        height: 140px;
-        margin: 15px 0;
-        padding: 10px;
-        @include single-box-shadow(rgba(0, 0, 0, 0.3), 0px, 0px, 4px);
-        > a {
-            display: block;
-            float: left;
-            height: 131px;
-            margin: 5px 5px;
-            overflow: hidden;
-            width: 270px;
-            img {
-                position: relative;
-                top: -60px;
-                width: 270px;
-            }
-        }
-        .details {
-            margin: 0 0 0 295px;
-            position: absolute;
-            width: 630px;
-            h3 span {
-                &.latin {
-                    font-style: italic;
-                }
-                &.english {
-                    font-size: 12px;
-                    color: #807121;
-                }
-            }
-            p {
-                height: 72px;
-                overflow: hidden;
-            }
-        }
-    }
-    .donate {
-        padding: 0;
-        margin: 15px 0;
-        border: 3px solid #fff;
-        background: #f1ebae;
-        @include single-box-shadow(rgba(0, 0, 0, 0.3), 0px, 0px, 4px);
-        p {
-            margin: 14px;
-            position: relative;
-        }
-        a {
-            background: url(/static/images/layout/donate-btn.png) 0 0 no-repeat transparent;
-            cursor: pointer;
-            display: block;
-            float: right;
-            height: 32px;
-            padding: 0;
-            position: absolute;
-            right: 0;
-            text-indent: -9000px;
-            top: -6px;
-            width: 104px;
-            &:hover {
-	            background-position: 0 -32px;
-            }
-            &:active {
-	            background-position: 0 -64px;
-            }
-        }
-    }
-    footer {
-        background: none;
-        > img {
-            display: none;
-        }
-    }   
-}
+@import "home";
+@import "about";
 
-/* About */
-
-#about #main {
-    img {
-        float: right;
-        margin: 5px 0 20px 20px;
-        .bookcover {
-            margin-right: 89px;
-        }
-    }
-    ul {
-        margin: 0 5px 0 18px;
-    }
-}
-
-/* Getting Started */
-
-#getting-started {
-    h2 {
-        margin-top: 0;
-        padding-top: 0;
-    }
-    .question {
-        padding: 18px 0 18px 45px;	
-        background-position: left 22px;
-        background-repeat: no-repeat;
-        border-bottom: 1px solid #e2dfcb;
-        ul {
-            padding: 0 0 0 15px;
-        }
-    }
-    .first.question {
-        margin: 11px 0 0 0;
-        border-top: 1px solid #e2dfcb;
-        background-image: url(/static/images/icons/1.png);	
-    }
-    .second.question {
-        background-image: url(/static/images/icons/2.png);	
-    }
-    .third.question {
-        background-image: url(/static/images/icons/3.png);	
-    }
-    .fourth.question {
-        background-image: url(/static/images/icons/4.png);	
-    }
-    .fifth.question {
-        background-image: url(/static/images/icons/5.png);	
-    }
-    .sixth.question {
-        margin: 0 0 11px 0;
-        background-image: url(/static/images/icons/6.png);	
-    }
-    a {
-        &.screenshot {
-            float: right;	
-            margin: 0 0 0 15px;
-            color: #1a2e11;
-            text-align: center;
-            &:hover {
-                text-decoration: none;	
-            }
-            img {
-                margin: 10px 0;
-                vertical-align: middle;
-                &.screenshot-thumb {
-                    border: 5px solid #fff;
-                    display: block;	
-                    margin: 0;
-                    @include single-box-shadow(rgba(0, 0, 0, 0.3), 0px, 1px, 4px);
-                }
-            }
-        }
-        &.onward-btn {
-            cursor: pointer;
-            display: block;
-            float: right;
-            width: 280px;
-            height: 32px;
-            margin: 10px 0;
-            background: url(/static/images/layout/onward-btn-orange.png) 0 0 no-repeat transparent;
-            text-indent: -9000px;
-            &:hover {
-                background-position: 0 -32px;
-            }
-            &:active {
-                background-position: 0 -64px;
-            }
-        }
-    }
-    $video-height: 147px;
-    $video-width: 196px;
-    .video-topic {
-        height: $video-height;
-        margin-bottom: 4px;
-        width: $video-width;
-        img {
-            height: $video-height;
-            width: $video-width;
-        }
-        a {
-            cursor: pointer;
-        }
-    }
-}
-
-/* Advanced Map to Groups */
-
-$advanced-map-frame-border: 5px solid rgba(255, 255, 255, 0.8);
-$advanced-map-active-color: #1a2e12;
-$image-box-shadow-color: rgba(0, 0, 0, 0.6);
-
-#advanced-map {
-    h2 {
-        clear: left;
-    }
-    #plant-map-list {
-	    margin: 10px 0;
-    }
-    #group-section {
-        height: 200px;
-    }
-    .plant-group {
-        cursor: pointer;
-        float: left;
-        height: 185px;
-        margin: 0 10px 10px 0;
-        padding: 2px 0 0;
-        position: relative;
-        width: 110px;
-        &.last {
-	        margin: 0 0 10px 0;	
-        }
-        &:hover {
-            .frame {
-                border-color: $advanced-map-active-color;
-            }
-            h3 {
-                background: $advanced-map-active-color;
-                color: #fff;
-            }
-        }
-        &.active {
-            h3 {
-                background: $advanced-map-active-color;
-	            color: #fff;
-            }
-            .frame {
-                border-color: $advanced-map-active-color;
-            }
-        }
-        h3 {
-            bottom: 146px;
-            color: $link-green;
-            font-size: 12px;
-            line-height: 120%;
-            margin: 0 0 0 0;
-            padding: 6px 0 6px 5px;
-            position: absolute;
-            width: 105px;
-        }
-        .image {
-            position: absolute;
-            top: 40px;
-        }
-        .frame {
-            border: $advanced-map-frame-border;
-            height: 91px;	
-            position: absolute;
-            top: 0;
-            width: 100px;
-            z-index: 100;
-        }
-        .img-container {
-            height: 101px;
-            margin-bottom: 6px;
-            overflow: hidden;
-            width: 110px;
-            @include single-box-shadow($image-box-shadow-color, 0, 0, 4px);
-        }
-    }
-    .plant-subgroup {
-        cursor: default;
-        float: left;
-        height: 264px;
-        margin: 0 11px 11px 0;
-        padding: 17px 0 0 0;
-        width: 160px;
-        &.last {
-            margin-right: 0;
-        }
-        .image {
-	        position: relative;	
-        }
-        .frame {
-            border: 5px solid #1a2e12;
-            height: 129px;	
-            position: absolute;
-            top: 0;
-            width: 150px;
-            z-index: 100;
-        }
-        h3 {
-            background: #1a2e12;
-	        color: #fff;
-            font-size: 13px;
-            height: 30px;
-	        line-height: 120%;
-	        margin: 0 0 0 0;
-	        padding: 6px;
-        }
-        .img-container {
-        	height: 139px;
-	        overflow: hidden;
-	        width: 160px;
-        }
-        .more-info {
-	        background: url(/static/images/icons/more-info.png) left 4px no-repeat transparent;	
-	        margin: 5px 0 0 0;
-	        padding: 0 0 0 19px;
-        }
-    }
-    p.video {
-    	background: url(/static/images/icons/icon3.png) left 4px no-repeat transparent;
-	    margin: 2px 0;
-	    padding: 3px 0 0 22px;
-    }
-    p.list {
-	    background: url(/static/images/icons/icon1.png) left 4px no-repeat transparent;
-	    margin: 2px 0 0;
-	    padding: 3px 0 0 22px;
-    }
-    .choose-btn {
-        background: url(/static/images/layout/choose-btn.png) 0 0 no-repeat transparent;
-        display: block;
-        height: 32px;
-        margin: 10px 0 5px;
-        text-indent: -9000px;
-        width: 104px;
-        &:hover {
-	        background-position: 0 -32px;
-        }
-        &:active {
-	        background-position: 0 -64px;
-        }
-    }
-}
-
-/* Glossary */
-
-/* Glossary term underline for popup */
-.gloss {
-    border-bottom: 1px dashed;
-    cursor: pointer;
-}
-
-#glossary {
-    #alphabet {
-        height: 33px;
-        list-style-type: none;
-        margin: 7px 0;
-        padding: 0;
-        width: 712px; /* 2px wider than its parent box so no wrap in Moz */
-        li {
-            border-left: 1px solid #e1e1dc;
-            float: left;
-            font-size: 18px;
-            margin: 0;
-            padding: 0 7px;
-            &:first-child {
-                border-left: 0;
-            }
-            &.inactive {
-                color: #ccc;
-            }
-            .current a {
-                color: #000;
-                &:hover {
-                    text-decoration: none;
-                }
-            }
-        }
-    }
-    #terms {
-        background-color: #fff;
-        border: 1px solid #e1e1dc;
-        clear: left;
-        margin: 0 0 24px 0;
-        width: 710px;
-        dt, dd {
-            border-top: 1px solid #e1e1dc;
-            min-height: 24px;
-        }
-        dt {
-            clear: left;
-            float: left;
-            line-height: 25px;
-            padding: 7px 10px 10px 38px;
-            width: 190px;
-            &:first-child, &:first-child + dd {
-                border-top: 0;
-            }
-            a {
-                float: left;
-                margin-left: -34px;
-            }
-        }
-        dd {
-            margin-left: 224px;
-            padding: 13px;
-        }
-        img {
-            padding-left: 4px;
-            padding-top: 1px;
-        }
-    }
-}
-
-/* Glossary tooltip */
-.glosstip {
-    line-height: 140%;
-    position: relative;
-    max-width: 30em;
-    img {
-        background: $tooltip-background-top-color;
-        border: 1px solid $tooltip-border-color;
-        bottom: 110%;
-        padding: 4px;
-        position: absolute;
-        @include single-box-shadow($tooltip-shadow-color, 1px, 1px, 2px);
-        @include border-radius(2px);
-    }
-}
-
-/* Video Help Topics */
-
-#video {
-    .video-topic {
-        float: left;
-        height: 176px;
-        margin: 10px 16px 10px 0;
-        position: relative;
-        width: 220px;
-        img {
-            height: 137px;
-            width: 220px;
-        }
-        > p {
-            font-family: $headings-font;
-            font-size: 18px;
-            line-height: 105%;
-            margin-top: 4px;
-        }
-        .missing-image {
-            border: 1px solid $link-green;
-            height: 135px;
-            width: 218px;
-            p {
-                left: auto;
-                margin: 55px 0;
-                position: absolute;
-                text-align: center;
-                top: auto;
-                white-space: nowrap;
-                width: 100%;
-            }
-        }
-    }
-}
-
-/* Contributors */
-
-#contributors #main {
-    ul {
-        list-style-type: none;
-    }
-    li {
-        margin: 0;
-    }
-}
-
-/* Imports for per-feature/app styles */
-/* (add here) */
-
-
-/* Include media queries for smartphones and tablets. These should be last. */
+/* Finally, include global media queries for smartphones and tablets. These
+ * should be last. */
 
 @import "site-media-queries";
 
