New CSS/templates: move over the Teaching page. (#215)

--- a/gobotany/site/templates/gobotany/_header.html
+++ b/gobotany/site/templates/gobotany/_header.html
@@ -26,7 +26,7 @@
                     <li class="dich-key">
                         <a href="{% url dich-key-placeholder %}">Dichotomous Key</a>
                     </li>
-                    <li class="teaching-tools"><a href="{% url teaching %}">Teaching</a></li>
+                    <li class="teaching-tools"><a href="{% url site-teaching %}">Teaching</a></li>
                     <li class="about"><a href="{% url site-about %}">About</a></li>
                 </ul>
                 <div id="search">
