--- a/gobotany/site/templates/gobotany/about.html
+++ b/gobotany/site/templates/gobotany/about.html
@@ -57,7 +57,7 @@
         and teaching tools!</li>
         <li>Share your ideas with other educators using 
         <a href="{% url plantshare-placeholder %}">PlantShare</a> and posting
-        to our <a href="{% url teaching %}">Teaching</a> page.</li>
+        to our <a href="{% url site-teaching %}">Teaching</a> page.</li>
         <li>During 2012-2013, New England Wild Flower Society will offer free 
         training for educators throughout New England on how to use Go
         Botany.</li>
