--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -32,7 +32,7 @@
                     <li class="dich-key">
                         <a href="{% url dich-key-placeholder %}">Dichotomous Key</a>
                     </li>
-                    <li class="teaching-tools"><a href="{% url teaching %}">Teaching</a></li>
+                    <li class="teaching-tools"><a href="{% url site-teaching %}">Teaching</a></li>
                     <li class="about last"><a href="{% url site-about %}">About</a></li>
                 </ul>
                 <div class="clearit"></div>
