--- a/gobotany/site/templates/gobotany/_footer.html
+++ b/gobotany/site/templates/gobotany/_footer.html
@@ -20,7 +20,7 @@
                         <li><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
                         <li><a href="{% url full-key-placeholder %}">Full Key</a></li>
                         <li><a href="{% url dich-key-placeholder %}">Dichotomous Key</a></li>
-                        <li><a href="{% url teaching %}">Teaching</a></li>
+                        <li><a href="{% url site-teaching %}">Teaching</a></li>
                         <li><a href="{% url site-about %}">About</a></li>
                     </ul>
                     <h6>Legal</h6>
